Added the first iteration of Vesmos

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,6 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
 }
@@ -10,7 +8,7 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: rgb(75, 168, 238);
   transition: 0.4s;
   padding: 3px;
 }
@@ -21,15 +19,14 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
+/* @media (min-width: 1024px) {
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
+  }
+} */
+
+@media (max-width: 624px) {
+  #app {
+    padding: 2rem 0;
   }
 }
